InsaneLib 1.5.0 and 4 seconds fade out